centered cards, added color, fixed spacing issues

--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
   position: relative;
+  text-align: center;
 }
 
 header {
@@ -16,19 +17,21 @@ header {
 
 .gameboard {
   border: 1px solid black;
-  text-align: center;
-  margin-left: 5%;
-  margin-right: 5%;
+  width: 60vw;
+  margin: 0 auto;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
 }
 
 #game div {
   border: 1px solid black;
-  width: 15%;
-  height: 200px;
+  border-radius: 4px;
+  height: 9em;
+  width: 7em;
   margin: 10px;
   display: inline-block;
-  border-radius: 4px;
-
+  flex-basis: 15%;
 }
 
 .red.show {
@@ -61,6 +64,14 @@ header {
 
 .purple.show {
   background-color: purple;
+}
+
+.pink.show {
+  background-color: pink;
+}
+
+.teal.show {
+  background-color: teal;
 }
 
 .incomplete {
